--- a/package.json
+++ b/package.json
@@ -3,22 +3,38 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite dev",
     "build": "vite build --emptyOutDir",
-    "preview": "vite preview"
+    "build:prod": "vite build --emptyOutDir --mode production",
+    "build:staging": "vite build --emptyOutDir --staging",
+    "preview": "vite preview",
+    "eslint": "eslint --ext .js,.ts src",
+    "eslint:fix": "eslint --ext .js,.ts src --fix"
   },
   "devDependencies": {
-    "glob": "^8.0.1",
-    "vite": "^2.9.0",
-    "vite-plugin-pug": "^0.3.1"
-  },
-  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "autoprefixer": "^10.0.2",
-    "jquery": "^3.6.0",
+    "eslint": "6",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "glob": "^8.0.1",
     "picocolors": "~1",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
     "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.0",
+    "vite-plugin-pug": "^0.3.1"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.31"
   }
