--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "build:staging": "vite build --emptyOutDir --staging",
     "preview": "vite preview",
     "eslint": "eslint --ext .js,.ts src",
-    "eslint:fix": "eslint --ext .js,.ts src --fix"
+    "eslint:fix": "eslint --ext .js,.ts src --fix",
+    "prepare": "husky install",
+    "commit":"git add . && git-cz"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-legacy": "^1.8.2",
     "autoprefixer": "^10.0.2",
+    "commitizen": "^4.2.4",
+    "cz-customizable": "^6.3.0",
     "eslint": "6",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-pug": "^1.2.4",
     "eslint-plugin-standard": "^5.0.0",
     "glob": "^8.0.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^12.4.1",
     "picocolors": "~1",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
@@ -36,5 +43,13 @@
     "jquery": "^3.6.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.31"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,pug}": "eslint --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
