--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "eslint --ext .js,.ts src",
     "eslint:fix": "eslint --ext .js,.ts src --fix",
     "prepare": "husky install",
-    "commit":"git add . && git-cz"
+    "commit": "git add . && git-cz"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -20,10 +20,12 @@
     "autoprefixer": "^10.0.2",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
-    "eslint": "6",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-pug": "^1.2.4",
     "eslint-plugin-standard": "^5.0.0",
@@ -33,6 +35,7 @@
     "picocolors": "~1",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
+    "prettier": "^2.6.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "typescript": "^4.6.4",
