--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Packages
       run: |
-        npm install
+        npm run bootstrap
     - name: Run ESLint
       run: |
         npx eslint --ext .ts,.js src
