--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite dev",
+    "bootstrap":"npx pnpm install",
     "build": "vite build --emptyOutDir",
     "build:prod": "vite build --emptyOutDir --mode production",
     "build:staging": "vite build --emptyOutDir --staging",
@@ -22,7 +23,6 @@
     "cz-customizable": "^6.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "^4.0.0",
