--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite dev",
-    "bootstrap":"npx pnpm install",
+    "bootstrap": "npx pnpm install",
     "build": "vite build --emptyOutDir",
     "build:prod": "vite build --emptyOutDir --mode production",
     "build:staging": "vite build --emptyOutDir --staging",
@@ -34,13 +34,19 @@
     "lint-staged": "^12.4.1",
     "picocolors": "~1",
     "postcss": "^8.4.12",
+    "postcss-advanced-variables": "^3.0.1",
     "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-preset-env": "^7.5.0",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.6.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.0",
-    "vite-plugin-pug": "^0.3.1"
+    "vite-plugin-pug": "^0.3.1",
+    "vite-plugin-windicss": "^1.8.4",
+    "windicss": "^3.5.3"
   },
   "dependencies": {
     "jquery": "^3.6.0",
