--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commit": "git add . && git-cz"
   },
   "devDependencies": {
+    "@iconify/json": "^2.1.43",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-legacy": "^1.8.2",
@@ -45,10 +46,12 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.0",
     "vite-plugin-pug": "^0.3.1",
+    "vite-plugin-purge-icons": "^0.8.1",
     "vite-plugin-windicss": "^1.8.4",
     "windicss": "^3.5.3"
   },
   "dependencies": {
+    "@iconify/iconify": "^2.2.1",
     "jquery": "^3.6.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.31"
